<resources>
    <string name="app_name"><b>Rick And Morty</b></string>
    <string name="guess_here">Guess here!</string>
    <string name="email_hint">Enter email</string>
    <string name="password_hint">Enter password</string>
    <string name="login_button_text">Login</string>
    <string name="sign_up">Sign up here</string>
    <string name="email_address">Enter email</string>
    <string name="password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register">Register now</string>
</resources>