<?xml version="1.0" encoding="utf-8"?>
<!--דף הבית - התחברות-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="20"
    android:orientation="vertical"
    android:background="@drawable/backgroundloginrick">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:fontFamily="@font/get_schwifty"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#D60909"
        android:textSize="48sp"
        android:textStyle="bold|italic"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.5"
        android:src="@drawable/icon"/>





    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="5"
        android:layout_margin="30dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:weightSum="10">

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="#B703DAC5"
                android:textColorHint="@color/black"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:textColor="#23371A"
                android:textColorHighlight="#0E0D0D"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:textColorHint="@color/black"
                android:background="#B703DAC5"
                android:backgroundTint="@color/teal_200"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textColor="#23371A"
                android:textColorHighlight="#0E0D0D"
                android:textStyle="bold"/>
            <Space
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:backgroundTint="#15284A"
                android:text="@string/login_button_text"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnSignup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:backgroundTint="#15284A"
                android:textColor="@color/white"
                android:text="@string/sign_up"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>